--- a/scss/pages/_base.scss
+++ b/scss/pages/_base.scss
@@ -459,7 +459,7 @@ SINGLE BLOG POST STYLES
     }
 
     .post_text_inner {
-        padding: 50px 0 !important;
+    //    padding: 50px 0 !important;
     }
 }
 
