--- a/scss/style.scss
+++ b/scss/style.scss
@@ -25,6 +25,9 @@ IMPORT ELEMENTS
 // forms (inputs & labels)
 @import "elements/forms";
 
+// Youtube Loader
+@import "elements/youtube";
+
 /*********************
 IMPORT PAGES
 *********************/
