--- a/scss/elements/_youtube.scss
+++ b/scss/elements/_youtube.scss
@@ -38,14 +38,17 @@
 }
 
 .lb_yt_external a {
-    &::before, &::after {
+    &::after,
+    &::before {
         color: white;
         font: $body-font;
         line-height: 47px;
     }
+
     &::before {
         content: 'View Our ';
     }
+
     &::after {
         content: ' Channel';
         padding-right: 18px;
@@ -53,14 +56,8 @@
 }
 
 .lb_pageable_links {
-
     .divider {
         color: white;
-    }
-
-    hr {
-        border: 1px solid white;
-        width: 70px;
     }
 
     p {
@@ -69,19 +66,14 @@
     }
 
     a {
-    font-weight: bold;
-    color: white!important;
-    margin: 0 10px;
-    transition: $transition;
-    padding-bottom: 4px;
-    width: 25%;
-
-    &.active ~ hr{
-
+        font-weight: bold;
+        color: white!important;
+        margin: 0 10px;
+        transition: $transition;
+        padding-bottom: 4px;
+        width: 25%;
+        &.active {
+            color: $color3!important;
+        }
     }
-
-    &:first-child.active ~ hr{
-        margin-left: 25%;
-    }
-}
 }
